--- a/PushServerCallable/config.properties
+++ b/PushServerCallable/config.properties
@@ -1,9 +1,11 @@
 #PUSH Server configuration
+## milliseconds(ex: 5000 = 5 second)
+RUN_INTERVAL = 5000
 
-#Android configuration
+##Android configuration
 API_KEY=AIzaSyAB80eAU0zEVBCXrPeBMhIlOYqnH5Kmm78
 
-#IOS configuration
+##IOS configuration
 APNS_SSL_CERTIFICATE=C:/asdf/cert/HomehubManager_dev.p12
 APNS_SSL_CERTIFICATE_PWD=newolleh
-IS_PRODUCTION=true
+IS_PRODUCTION=false
