--- a/PushServerCallable/config.properties
+++ b/PushServerCallable/config.properties
@@ -1,5 +1,7 @@
 #PUSH Server configuration
-## milliseconds(ex: 5000 = 5 second)
+#QueryServer Info
+SERVER_IP=192.168.1.20
+##run interval(milliseconds, ex: 5000 = 5 second)
 RUN_INTERVAL = 5000
 
 ##Android configuration
