--- a/PushServerCallable/pom.xml
+++ b/PushServerCallable/pom.xml
@@ -13,6 +13,12 @@
 		</dependency> -->
 
 		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.2.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.github.fernandospr</groupId>
 			<artifactId>javapns-jdk16</artifactId>
 			<version>2.4.0</version>
